# simple-cad

./: AUTHORS  CMakeLists.txt  QtOpenCascadeWin32.pri  README  cad.pro  cad.qrc  cadapplication.cpp  cadapplication.h  childwindow.cpp  childwindow.h  controller.cpp  controller.h  error.h  filehelper.cpp  filehelper.h  inventorviewer.cpp  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  notes.txt  planesettingswidget.cpp  planesettingswidget.h  pointsettingswidget.cpp  pointsettingswidget.h  positionsettingswidget.cpp  positionsettingswidget.h  primitivesettingswidget.cpp  primitivesettingswidget.h  propertieswidget.cpp  propertieswidget.h  qshapemodel.cpp  qshapemodel.h  todo.txt  view.cpp  view.h  viewprovider.h  widgetdialog.cpp  widgetdialog.h
action/: action.h  boolean.cpp  boolean.h  combineaction.h  common.cpp  common.h  create3dprimitive.cpp  create3dprimitive.h  createbox.cpp  createbox.h  createcone.cpp  createcone.h  createcylinder.cpp  createcylinder.h  createellipsoid.cpp  createellipsoid.h  createplane.cpp  createplane.h  createrectangle.cpp  createrectangle.h  createsphere.cpp  createsphere.h  createtorus.cpp  createtorus.h  cut.cpp  cut.h  factory.h  fillet.cpp  fillet.h  fuse.cpp  fuse.h  topoaction.h
common/: command.cpp  command.h  exception.h  message.h  messagereceiver.h  sendmessagecommand.cpp  sendmessagecommand.h
gui/: actionlist.cpp  actionlist.h  cadapplication.cpp  cadapplication.h  childwindow.cpp  childwindow.h  command.h  controller.cpp  controller.h  createcommand.cpp  createcommand.h  interactiveview.cpp  interactiveview.h  inventorviewer.cpp  inventorviewer.h  mainwindow.cpp  mainwindow.h  model.cpp  model.h  shape.cpp  shape.h  shapemodel.cpp  shapemodel.h  version.cpp  version.h  view.cpp  view.h  viewershape.cpp  viewershape.h  viewprovider.cpp  viewprovider.h
gui/chunks/: actioncontainer.h  actionlist.h  actionlistset.cpp  actionlistset.h  createactionlist.cpp  createactionlist.h  inventorviewer.h  modifyactionlist.cpp  modifyactionlist.h  multidoccontainer.h  qshapemodel.cpp  qshapemodel.h  viewcommand.cpp  viewcommand.h
gui/command/: boolcommand.cpp  boolcommand.h  createprimitivecommand.cpp  createprimitivecommand.h  createsketchcommand.cpp  createsketchcommand.h  filletcommand.cpp  filletcommand.h  removecommand.cpp  removecommand.h
gui/widget/: booloperationwidget.cpp  booloperationwidget.h  createprimitivewidget.cpp  createprimitivewidget.h  filletoperationwidget.cpp  filletoperationwidget.h  pickshapewidget.cpp  pickshapewidget.h  pointsettingswidget.cpp  pointsettingswidget.h  positionsettingswidget.cpp  positionsettingswidget.h  propertieswidget.cpp  propertieswidget.h  shapelistwidget.cpp  shapelistwidget.h  widgetdialog.cpp  widgetdialog.h
sketcher/: sketchcommon.h
sketcher/command/: commandmessage.h
sketcher/gui/: sketcherview.cpp  sketcherview.h
sketcher/mod/: circle.cpp  circle.h  polyline.cpp  polyline.h  primitive2d.cpp  primitive2d.h  rectangle.cpp  rectangle.h  resizepolygon.cpp  resizepolygon.h
sketcher/mod/tmp/: rectangle.cpp  rectangle.h
